--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@ body {
     margin: auto;
     width: 50%;
     text-align: center;
+    display: none;
 
     padding: 10px;}
 #frame2#frame1{
@@ -13,7 +14,7 @@ body {
     margin: auto;
     width: 50%;
     text-align: center;
-
+    display: none;
     padding: 10px;}
     .container{ 
         float:left; 
